--- a/recon.config
+++ b/recon.config
@@ -1,6 +1,6 @@
 [commands]
 whois = whois TARGET_HERE -H | grep -oE "^.*:.*$" | sed "s/>>>.*<<</ /g"
-nmap = nmap -sV TARGET_HERE --script=vuln
+nmap = nmap -sV TARGET_HERE
 
 [log]
 base_path = ./logs
