--- a/recon.config
+++ b/recon.config
@@ -1,6 +1,8 @@
 [commands]
 whois = whois TARGET_HERE -H | grep -oE "^.*:.*$" | sed "s/>>>.*<<</ /g"
-nmap = nmap -sV TARGET_HERE
+; The nmap command has the regex sed to remove the latency difference to avoid noise in comparing logs at different time
+; this sed and regex is quite dangerous because it may change unexpected information too so CHECK IT WHEN THERE IS A PROBLEM
+nmap = nmap -sV TARGET_HERE | grep -vE "^SF.*$" | grep -vE "^.*FINGERPRINT.*$" | sed -r "s/\([0-9]+\.[0-9]+s latency\)/\(\)/"
 
 [log]
 base_path = ./logs
