Added merging subdomain wordlists

--- a/recon.config
+++ b/recon.config
@@ -1,9 +1,20 @@
 [commands]
+; DOMAIN INFORMATION GATHERING SECTION
 whois = whois TARGET_HERE -H | grep -oE "^.*:.*$" | sed "s/>>>.*<<</ /g"
+nslookup = nslookup TARGET_HERE
+
+; SUBDOMAIN SECTION
+subdomain_merge = sort SUBDOMAIN_WORDLISTS_PATH/* | uniq > SUBDOMAIN_MERGE_WORDLIST
+
+
+; ACTIVE SCAN SECTION
 ; The nmap command has the regex sed to remove the latency difference to avoid noise in comparing logs at different time
 ; this sed and regex is quite dangerous because it may change unexpected information too so CHECK IT WHEN THERE IS A PROBLEM
 nmap = nmap -sV TARGET_HERE | grep -vE "^SF.*$" | grep -vE "^.*FINGERPRINT.*$" | sed -r "s/\([0-9]+\.[0-9]+s latency\)/\(\)/"
-nslookup = nslookup TARGET_HERE
+
+[temp]
+subdomain_wordlists_path = ./SecLists/Discovery/DNS
+subdomain_temp_merged_wordlist = ./temps/subdomain_temp/temp_merged_subdomains_wordlist.txt
 
 [log]
 base_path = ./logs
