Added create unique subdomains in multiple wordlists to choose rather than a big giant one

--- a/recon.config
+++ b/recon.config
@@ -14,7 +14,10 @@ nmap = nmap -sV TARGET_HERE | grep -vE "^SF.*$" | grep -vE "^.*FINGERPRINT.*$" |
 
 [temp]
 subdomain_wordlists_path = ./SecLists/Discovery/DNS
-subdomain_temp_merged_wordlist = ./temps/subdomain_temp/temp_merged_subdomains_wordlist.txt
+subdomain_temp_path = ./temps/subdomain_temp
+subdomain_temp_0_merged_wordlist = 100_temp_merged_subdomains_wordlist.txt
+subdomain_temp_1_merged_wordlist = 101_temp_merged_subdomains_wordlist.txt
+; 100 to make this list the last one in the subdomain wordlists in temp
 
 [log]
 base_path = ./logs
