Added basic snrublist3r tool code but still not yet get the output back to Python via subprocess due to long running or big output

--- a/recon.config
+++ b/recon.config
@@ -5,9 +5,13 @@ nslookup = nslookup TARGET_HERE
 
 ; SUBDOMAIN SECTION
 subdomain_merge = sort SUBDOMAIN_WORDLISTS_PATH/* | uniq > SUBDOMAIN_MERGE_WORDLIST
+; snrublist3r = python ../BBP_sus_tools_base/snrublist3r/snrublist3r.py --help
+snrublist3r = python ../BBP_sus_tools_base/snrublist3r/snrublist3r.py -d TARGET_HERE --permutation-file ../BBP_sus_tools_base/snrublist3r/lists/permutation-strings.txt -v
+; When necessary change the snrublist3r script path here
+; somehow subprocess python auto add absolute project path before the script path
 
 
-; ACTIVE SCAN SECTION
+; PORTs AND SERVICES SCAN SECTION
 ; The nmap command has the regex sed to remove the latency difference to avoid noise in comparing logs at different time
 ; this sed and regex is quite dangerous because it may change unexpected information too so CHECK IT WHEN THERE IS A PROBLEM
 nmap = nmap -sV TARGET_HERE | grep -vE "^SF.*$" | grep -vE "^.*FINGERPRINT.*$" | sed -r "s/\([0-9]+\.[0-9]+s latency\)/\(\)/"
@@ -24,3 +28,6 @@ base_path = ./logs
 output_order: whois,
     nslookup,
     nmap
+
+; subdomain tools log
+subdomain_tools_log_path = /subdomain_tools_log
