--- a/recon.config
+++ b/recon.config
@@ -8,7 +8,8 @@ subdomain_merge = sort SUBDOMAIN_WORDLISTS_PATH/* | uniq > SUBDOMAIN_MERGE_WORDL
 ; snrublist3r = python ../BBP_sus_tools_base/snrublist3r/snrublist3r.py --help
 snrublist3r = python ../BBP_sus_tools_base/snrublist3r/snrublist3r.py -d TARGET_HERE --permutation-file ../BBP_sus_tools_base/snrublist3r/lists/permutation-strings.txt -v
 ; When necessary change the snrublist3r script path here
-; somehow subprocess python auto add absolute project path before the script path
+; somehow subprocess python auto add absolute project path before the script path, so use the relative path
+chaos = ../go/bin/chaos -d TARGET_HERE
 
 
 ; PORTs AND SERVICES SCAN SECTION
@@ -30,4 +31,4 @@ output_order: whois,
     nmap
 
 ; subdomain tools log
-subdomain_tools_log_path = /subdomain_tools_log
+subdomain_tools_log_path = subdomain_tools_log
