--- a/recon.config
+++ b/recon.config
@@ -6,10 +6,11 @@ nslookup = nslookup TARGET_HERE
 ; SUBDOMAIN SECTION
 subdomain_merge = sort SUBDOMAIN_WORDLISTS_PATH/* | uniq > SUBDOMAIN_MERGE_WORDLIST
 ; snrublist3r = python ../BBP_sus_tools_base/snrublist3r/snrublist3r.py --help
-snrublist3r = python ../BBP_sus_tools_base/snrublist3r/snrublist3r.py -d TARGET_HERE --permutation-file ../BBP_sus_tools_base/snrublist3r/lists/permutation-strings.txt -v
+snrublist3r = python ../BBP_sus_tools_base/snrublist3r/snrublist3r.py -d TARGET_HERE --permutation-file ../BBP_sus_tools_base/snrublist3r/lists/permutation-strings.txt --silent
 ; When necessary change the snrublist3r script path here
 ; somehow subprocess python auto add absolute project path before the script path, so use the relative path
-chaos = ../go/bin/chaos -d TARGET_HERE
+chaos = ../go/bin/chaos -silent -d TARGET_HERE
+httpx = ../go/bin/httpx -sc -nc -l TARGET_HERE -silent
 
 
 ; PORTs AND SERVICES SCAN SECTION
