--- a/recon.config
+++ b/recon.config
@@ -10,8 +10,8 @@ snrublist3r = python ../BBP_sus_tools_base/snrublist3r/snrublist3r.py -d TARGET_
 ; When necessary change the snrublist3r script path here
 ; somehow subprocess python auto add absolute project path before the script path, so use the relative path
 chaos = ../go/bin/chaos -silent -d TARGET_HERE
-httpx = ../go/bin/httpx -sc -nc -l TARGET_HERE -silent
-
+httpx = ../go/bin/httpx -silent -rl 450 -sc -nc -l TARGET_HERE 
+gobuster_subdomain = gobuster dns --no-color --timeout 2s --threads 4 -i -d TARGET_HERE
 
 ; PORTs AND SERVICES SCAN SECTION
 ; The nmap command has the regex sed to remove the latency difference to avoid noise in comparing logs at different time
