--- a/recon.config
+++ b/recon.config
@@ -16,7 +16,7 @@ gobuster_subdomain = gobuster dns --no-color --timeout 2s --threads 4 -i -d TARG
 ; PORTs AND SERVICES SCAN SECTION
 ; The nmap command has the regex sed to remove the latency difference to avoid noise in comparing logs at different time
 ; this sed and regex is quite dangerous because it may change unexpected information too so CHECK IT WHEN THERE IS A PROBLEM
-nmap = nmap -sV TARGET_HERE | grep -vE "^SF.*$" | grep -vE "^.*FINGERPRINT.*$" | sed -r "s/\([0-9]+\.[0-9]+s latency\)/\(\)/"
+nmap = nmap -sV --script=vuln TARGET_HERE | grep -vE "^SF.*$" | grep -vE "^.*FINGERPRINT.*$" | sed -r "s/\([0-9]+\.[0-9]+s latency\)/\(\)/"
 
 [temp]
 subdomain_wordlists_path = ./SecLists/Discovery/DNS
@@ -29,7 +29,8 @@ subdomain_temp_1_merged_wordlist = 101_temp_merged_subdomains_wordlist.txt
 base_path = ./logs
 output_order: whois,
     nslookup,
-    nmap
+    nmap,
+    subdomain
 
 ; subdomain tools log
 subdomain_tools_log_path = subdomain_tools_log
