Added gospider, added an approach to quickly sum up the parameter count, need to work on how to multi process, how to sum all tools' output and save result in the main script

--- a/recon.config
+++ b/recon.config
@@ -18,12 +18,20 @@ gobuster_subdomain = gobuster dns --no-color --timeout 2s --threads 4 -i -d TARG
 ; this sed and regex is quite dangerous because it may change unexpected information too so CHECK IT WHEN THERE IS A PROBLEM
 nmap = nmap -sV --script=vuln TARGET_HERE | grep -vE "^SF.*$" | grep -vE "^.*FINGERPRINT.*$" | sed -r "s/\([0-9]+\.[0-9]+s latency\)/\(\)/"
 
+; PARAMETERS AND WEB CRAWLING SECTION
+blackwidow = python ./tools_base/blackwidow/blackwidow.py -u https://TARGET_HERE -l 3
+gospider = gospider -s https://TARGET_HERE -t 4 -d 1 --sitemap -a
+
 [temp]
 subdomain_wordlists_path = ./SecLists/Discovery/DNS
 subdomain_temp_path = ./temps/subdomain_temp
 subdomain_temp_0_merged_wordlist = 100_temp_merged_subdomains_wordlist.txt
 subdomain_temp_1_merged_wordlist = 101_temp_merged_subdomains_wordlist.txt
 ; 100 to make this list the last one in the subdomain wordlists in temp
+
+; parameters and crawling path temp section 
+params_temp_path = ./temps/params_temp
+
 
 [log]
 base_path = ./logs
