Added the params and urls web crwaling probe process in recon_test.py and added paramspider into the tool

--- a/recon.config
+++ b/recon.config
@@ -21,6 +21,7 @@ nmap = nmap -sV --script=vuln TARGET_HERE | grep -vE "^SF.*$" | grep -vE "^.*FIN
 ; PARAMETERS AND WEB CRAWLING SECTION
 blackwidow = python ./tools_base/blackwidow/blackwidow.py -u https://TARGET_HERE -l 3
 gospider = gospider -s https://TARGET_HERE -t 4 -d 1 --sitemap -a
+paramspider = python ../BBP_sus_tools_base/ParamSpider/paramspider/main.py -d TARGET_HERE -s
 
 [temp]
 subdomain_wordlists_path = ./SecLists/Discovery/DNS
@@ -42,3 +43,6 @@ output_order: whois,
 
 ; subdomain tools log
 subdomain_tools_log_path = subdomain_tools_log
+
+; parameters and web crawling log
+params_tools_log_path = params_tools_log
