--- a/requirements_pip.txt
+++ b/requirements_pip.txt
@@ -1,19 +1,41 @@
-astroid @ file:///work/ci_py311/astroid_1676920975848/work
+aiodns==3.1.1
+attrs==23.1.0
 beautifulsoup4==4.12.2
 bs4==0.0.1
+cairocffi==1.6.1
 certifi==2023.7.22
-charset-normalizer==3.2.0
-colorama @ file:///work/ci_py311/colorama_1676827038675/work
-dill @ file:///croot/dill_1692271232022/work
+cffi==1.16.0
+charset-normalizer==3.3.2
+colorama==0.4.6
+cprint==1.2.2
+filelock==3.13.1
+gobject==0.1.0
+h11==0.14.0
 idna==3.4
-isort @ file:///tmp/build/80754af9/isort_1628603791788/work
-lazy-object-proxy @ file:///work/ci_py311/lazy-object-proxy_1676827255418/work
-lxml==4.9.3
-mccabe @ file:///opt/conda/conda-bld/mccabe_1644221741721/work
-platformdirs @ file:///croot/platformdirs_1692205439124/work
-pylint @ file:///work/ci_py311/pylint_1676920998643/work
+lxml==5.0.0
+numpy==1.26.3
+outcome==1.3.0.post0
+pandas==2.2.0
+pycares==4.4.0
+pycparser==2.21
+pycryptodomex==3.19.0
+pycurl==7.45.2
+pygeoip==0.3.2
+PySocks==1.7.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
 requests==2.31.0
+requests-file==1.5.1
+selenium==4.16.0
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
 soupsieve==2.5
-tomlkit @ file:///work/ci_py311/tomlkit_1676823218885/work
-urllib3==2.0.5
-wrapt @ file:///work/ci_py311/wrapt_1676827586170/work
+termcolor==2.3.0
+tldextract==5.1.1
+tqdm==4.66.1
+trio==0.23.1
+trio-websocket==0.11.1
+tzdata==2023.4
+urllib3==2.0.7
+wsproto==1.2.0
