Added DomainTrail in the subdomain enumeration tool set

--- a/recon.config
+++ b/recon.config
@@ -11,7 +11,8 @@ snrublist3r = python ../BBP_sus_tools_base/snrublist3r/snrublist3r.py -d TARGET_
 ; somehow subprocess python auto add absolute project path before the script path, so use the relative path
 chaos = ../go/bin/chaos -silent -d TARGET_HERE
 httpx = ../go/bin/httpx -silent -rl 450 -sc -nc -l TARGET_HERE 
-gobuster_subdomain = gobuster dns --no-color --timeout 2s --threads 4 -i -d TARGET_HERE
+domaintrail = python ../BBP_sus_tools_base/DomainTrail/DomainTrail.py -d TARGET_HERE -p
+gobuster_subdomain = gobuster dns --no-color --timeout 2s --threads 4 -d TARGET_HERE
 
 ; PORTs AND SERVICES SCAN SECTION
 ; The nmap command has the regex sed to remove the latency difference to avoid noise in comparing logs at different time
