Upgrade the version control to provide better view

--- a/recon.config
+++ b/recon.config
@@ -1,4 +1,7 @@
 [commands]
+; VERSION CONTROL
+diff = vim -d PREV_LOG NEW_LOG -c TOhtml -c 'w! OUTPUT_LOG' -c 'qa!'
+
 ; DOMAIN INFORMATION GATHERING SECTION
 whois = whois TARGET_HERE -H | grep -oE "^.*:.*$" | sed "s/>>>.*<<</ /g"
 nslookup = nslookup TARGET_HERE
@@ -17,12 +20,15 @@ gobuster_subdomain = gobuster dns --no-color --timeout 2s --threads 4 -d TARGET_
 ; PORTs AND SERVICES SCAN SECTION
 ; The nmap command has the regex sed to remove the latency difference to avoid noise in comparing logs at different time
 ; this sed and regex is quite dangerous because it may change unexpected information too so CHECK IT WHEN THERE IS A PROBLEM
-nmap = nmap -sV --script=vuln TARGET_HERE | grep -vE "^SF.*$" | grep -vE "^.*FINGERPRINT.*$" | sed -r "s/\([0-9]+\.[0-9]+s latency\)/\(\)/"
+nmap = nmap -sV --script=VULN TARGET_HERE | grep -vE "^SF.*$" | grep -vE "^.*FINGERPRINT.*$" | sed -r "s/\([0-9]+\.[0-9]+s latency\)/\(\)/"
 
 ; PARAMETERS AND WEB CRAWLING SECTION
 blackwidow = python ./tools_base/blackwidow/blackwidow.py -u https://TARGET_HERE -l 3
 gospider = gospider -s https://TARGET_HERE -t 4 -d 1 --sitemap -a
 paramspider = python ../BBP_sus_tools_base/ParamSpider/paramspider/main.py -d TARGET_HERE -s
+waybackurls = echo "TARGET_HERE" | go ../BBP_sus_tools_base/waybackurls/main.go -no-subs
+gau = echo "TARGET_HERE" | go ../BBP_sus_tools_base/gau/cmd/gau/main.go --timeout 10 --threads 4
+
 
 [temp]
 subdomain_wordlists_path = ./SecLists/Discovery/DNS
