Added version control changes noti and upgrade the main version control and swap the order of the version comparison for the sake of changes scanning

--- a/recon.config
+++ b/recon.config
@@ -1,6 +1,6 @@
 [commands]
 ; VERSION CONTROL
-diff = vim -d PREV_LOG NEW_LOG -c TOhtml -c 'w! OUTPUT_LOG' -c 'qa!'
+diff = vim -d NEW_LOG PREV_LOG -c TOhtml -c 'w! OUTPUT_LOG' -c 'qa!'
 
 ; DOMAIN INFORMATION GATHERING SECTION
 whois = whois TARGET_HERE -H | grep -oE "^.*:.*$" | sed "s/>>>.*<<</ /g"
