--- a/recon.config
+++ b/recon.config
@@ -1,6 +1,6 @@
 [commands]
 ; VERSION CONTROL
-diff = vim -d NEW_LOG PREV_LOG -c TOhtml -c 'w! OUTPUT_LOG' -c 'qa!'
+diff = vim -d PREV_LOG NEW_LOG -c TOhtml -c 'w! OUTPUT_LOG' -c 'qa!'
 
 ; DOMAIN INFORMATION GATHERING SECTION
 whois = whois TARGET_HERE -H | grep -oE "^.*:.*$" | sed "s/>>>.*<<</ /g"
@@ -26,8 +26,10 @@ nmap = nmap -sV --script=VULN TARGET_HERE | grep -vE "^SF.*$" | grep -vE "^.*FIN
 blackwidow = python ./tools_base/blackwidow/blackwidow.py -u https://TARGET_HERE -l 3
 gospider = gospider -s https://TARGET_HERE -t 4 -d 1 --sitemap -a
 paramspider = python ../BBP_sus_tools_base/ParamSpider/paramspider/main.py -d TARGET_HERE -s
-waybackurls = echo "TARGET_HERE" | go ../BBP_sus_tools_base/waybackurls/main.go -no-subs
-gau = echo "TARGET_HERE" | go ../BBP_sus_tools_base/gau/cmd/gau/main.go --timeout 10 --threads 4
+hakrawler = echo "https://TARGET_HERE" | ../BBP_sus_tools_base/hakrawler_custom/hakrawler -i -s
+waybackurls = echo "TARGET_HERE" | go run ../BBP_sus_tools_base/waybackurls/main.go -no-subs
+gau = echo "TARGET_HERE" | ../BBP_sus_tools_base/gau/cmd/gau/gau --timeout 10 --threads 4 | ./recon_utility_shell_script/add_params_tag.sh
+katana = ../BBP_sus_tools_base/katana/cmd/katana/katana -u "https://TARGET_HERE" -fs dn -jc -silent | ./recon_utility_shell_script/add_params_tag.sh
 
 
 [temp]
@@ -44,7 +46,7 @@ params_temp_path = ./temps/params_temp
 [log]
 base_path = ./logs
 output_order: whois,
-    nslookup,
+    nslookup
     nmap,
     subdomain
 
