--- a/requirements_pip.txt
+++ b/requirements_pip.txt
@@ -17,6 +17,7 @@ lxml==5.0.0
 numpy==1.26.3
 outcome==1.3.0.post0
 pandas==2.2.0
+pyarrow==15.0.0
 pycares==4.4.0
 pycparser==2.21
 pycryptodomex==3.19.0
