Adjusted the params process and mechanism

--- a/recon.config
+++ b/recon.config
@@ -25,7 +25,7 @@ nmap = nmap -sV --script=VULN TARGET_HERE | grep -vE "^SF.*$" | grep -vE "^.*FIN
 ; PARAMETERS AND WEB CRAWLING SECTION
 blackwidow = python ./tools_base/blackwidow/blackwidow.py -u https://TARGET_HERE -l 3
 gospider = gospider -s https://TARGET_HERE -t 4 -d 1 --sitemap -a
-paramspider = python ../BBP_sus_tools_base/ParamSpider/paramspider/main.py -d TARGET_HERE -s
+paramspider = python ../BBP_sus_tools_base/ParamSpider/paramspider/main.py -d TARGET_HERE -s | grep -E "^\[.*" | grep -Ev "^\[INFO\].*"
 hakrawler = echo "https://TARGET_HERE" | ../BBP_sus_tools_base/hakrawler_custom/hakrawler -i -s
 waybackurls = echo "TARGET_HERE" | go run ../BBP_sus_tools_base/waybackurls/main.go -no-subs
 gau = echo "TARGET_HERE" | ../BBP_sus_tools_base/gau/cmd/gau/gau --timeout 10 --threads 4 | ./recon_utility_shell_script/add_params_tag.sh
