Added nuclei tech analysis and builtwith tech analysis modules, need to integrate into the main script

--- a/recon.config
+++ b/recon.config
@@ -31,6 +31,10 @@ waybackurls = echo "TARGET_HERE" | go run ../BBP_sus_tools_base/waybackurls/main
 gau = echo "TARGET_HERE" | ../BBP_sus_tools_base/gau/cmd/gau/gau --timeout 10 --threads 4 | ./recon_utility_shell_scripts/add_params_tag.sh
 katana = ../BBP_sus_tools_base/katana/cmd/katana/katana -u "https://TARGET_HERE" -fs dn -jc -silent | ./recon_utility_shell_scripts/add_params_tag.sh
 
+; TECHNOLOGY ANALYSIS
+nuclei_tech_analysis = ../go/bin/nuclei -u TARGET_HERE -as -nc -silent
+nuclei_tech_analysis_extra = ../go/bin/nuclei -u TARGET_HERE -tags TECH_TAGS -silent -nc
+built_with_analysis = https://builtwith.com/TARGET_HERE
 
 [temp]
 subdomain_wordlists_path = ./SecLists/Discovery/DNS
