--- a/recon.config
+++ b/recon.config
@@ -20,7 +20,7 @@ gobuster_subdomain = gobuster dns --no-color --timeout 2s --threads 4 -d TARGET_
 ; PORTs AND SERVICES SCAN SECTION
 ; The nmap command has the regex sed to remove the latency difference to avoid noise in comparing logs at different time
 ; this sed and regex is quite dangerous because it may change unexpected information too so CHECK IT WHEN THERE IS A PROBLEM
-nmap = nmap -sV --script=VULN TARGET_HERE | grep -vE "^SF.*$" | grep -vE "^.*FINGERPRINT.*$" | sed -r "s/\([0-9]+\.[0-9]+s latency\)/\(\)/"
+nmap = nmap -sV -Pn --script=VULN TARGET_HERE | grep -vE "^SF.*$" | grep -vE "^.*FINGERPRINT.*$" | sed -r "s/\([0-9]+\.[0-9]+s latency\)/\(\)/"
 
 ; PARAMETERS AND WEB CRAWLING SECTION
 blackwidow = python ./tools_base/urls_and_parameters/blackwidow/blackwidow.py -u https://TARGET_HERE -l 3
@@ -32,8 +32,8 @@ gau = echo "TARGET_HERE" | ../BBP_sus_tools_base/gau/cmd/gau/gau --timeout 10 --
 katana = ../BBP_sus_tools_base/katana/cmd/katana/katana -u "https://TARGET_HERE" -fs dn -jc -silent | ./recon_utility_shell_scripts/add_params_tag.sh
 
 ; TECHNOLOGY ANALYSIS
-nuclei_tech_analysis = ../go/bin/nuclei -u TARGET_HERE -as -nc -silent
-nuclei_tech_analysis_extra = ../go/bin/nuclei -u TARGET_HERE -tags TECH_TAGS -silent -nc
+nuclei_tech_analysis = ./recon_utility_shell_scripts/capture_complete_command_output.sh "../go/bin/nuclei -u TARGET_HERE -as -nc 2>&1"
+nuclei_tech_analysis_extra = ./recon_utility_shell_scripts/capture_complete_command_output.sh "../go/bin/nuclei -u TARGET_HERE -tags TECH_TAGS -nc 2>&1"
 built_with_analysis = https://builtwith.com/TARGET_HERE
 
 [temp]
